<resources>
    <string name="app_name">System Dyplomant</string>
    <string name="search_hint">Wyszukaj temat</string>

    <!--subject_list_item-->
    <string name="text_subject_title_text">Temat:</string>
    <string name="text_subject_text">Gra mobilna z wykorzystaniem wirtualnej rzeczywistości</string>
    <string name="text_supervisor_title_text">Promotor:</string>
    <string name="text_supervisor_text">dr. inż. Marian Kowalski</string>
    <string name="text_subject_status_text">Dostępny</string>
    <string name="text_creator_title_text">Realizujący:</string>
    <string name="text_taken_up_text">0/1</string>
    <string name="text_creators_text">text_creators_text</string>
    <string name="btn_choose_text">Wybierz</string>

    <!--activity_login-->
    <string name="et_login_hint">Numer indeksu</string>
    <string name="et_password_hint">Hasło</string>
    <string name="btn_log_in_text">Zaloguj się</string>
    <string name="load_user_failed_text">Nie znaleziono dyplomanta</string>

    <!--activity_main-->
    <string name="text_my_subject_text">Mój temat</string>
    <string name="text_change_text">Zmień temat lub promotora</string>
    <string name="text_subject_list_text">Przeglądaj listę aktualnych tematów</string>
    <string name="text_my_documents_text">Przeglądaj dokumenty</string>

    <!--activity_subject_list-->
    <string name="load_subject_list_failed_text">"Nie udało się załadować tematów. Spróbuj ponownie za chwilę"</string>

    <!--activity_declaration-->
    <string name="text_graduate_label_text">Dane dyplomanta</string>
    <string name="et_graduate_names_text">et_graduate_names_text</string>
    <string name="et_student_no_text">et_student_no_text</string>
    <string name="et_speciality_text">et_speciality_text</string>
    <string name="et_form_text">et_form_text</string>
    <string name="et_year_text">et_year_text</string>

    <string name="text_declaration_label_text">Deklaracja realizacji pracy inżynierskiej</string>
    <string name="et_subject_pl_text">et_subject_pl_text</string>
    <string name="et_subject_en_text">et_subject_en_text</string>
    <string name="et_language_hint">Język realizacji pracy</string>
    <string name="et_supervisor_names_text">et_supervisor_names_text</string>
    <string name="et_purpose_range_hint">Cel i zakres pracy</string>
    <string name="et_short_desc_hint">Krótki opis pracy</string>

    <!--menu_main-->
    <string name="item_account_title">Konto</string>
    <string name="item_logout_title">Wyloguj</string>
    <string name="item_about_title">O aplikacji</string>

    <!--menu_subject_list-->
    <string name="item_search_title">Szukaj</string>
    <string name="item_hide_taken_title">Ukryj zajęte</string>
    <string name="choose_subject_failed">Nie można wybrać tematu, jeśli inny został wcześniej wybrany</string>

    <!--menu_declaration-->
    <string name="item_send_title">Udostępnij</string>
</resources>
