<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardBackgroundColor="#FEFEFE"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="5dp">

    <RelativeLayout
        android:id="@+id/layout_subject_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <RelativeLayout
            android:id="@+id/layout_subject_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_subject_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/text_supervisor_title"
                android:layout_alignParentTop="true"
                android:text="@string/text_subject_title_text"/>

            <TextView
                android:id="@+id/text_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/text_subject_title"
                android:layout_toEndOf="@id/text_subject_title"
                android:layout_marginStart="5dp"
                android:text="@string/text_subject_text"/>

            <TextView
                android:id="@id/text_supervisor_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_subject"
                android:text="@string/text_supervisor_title_text"/>

            <TextView
                android:id="@+id/text_supervisor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/text_supervisor_title"
                android:layout_toEndOf="@id/text_supervisor_title"
                android:layout_marginStart="5dp"
                android:text="@string/text_supervisor_text"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_subject_creators"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_subject_info"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/text_subject_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_subject_status_text"/>

            <TextView
                android:id="@+id/text_creator_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_subject_status"
                android:text="@string/text_creator_title_text"/>

            <TextView
                android:id="@+id/text_taken_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_subject_status"
                android:layout_toEndOf="@+id/text_creator_title"
                android:layout_marginStart="5dp"
                android:text="@string/text_taken_up_text" />

            <TextView
                android:id="@+id/text_creators"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_taken_up"
                android:text="@string/text_creators_text"/>

        </RelativeLayout>

        <Button
            android:id="@+id/btn_choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_subject_creators"
            android:text="@string/btn_choose_text"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>