<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hubson.systemdyplomant.view.main.MainActivity">

    <View android:id="@+id/view_fake_horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"/>

    <View android:id="@+id/view_fake_vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerVertical="true"/>

    <android.support.v7.widget.CardView
        android:id="@+id/card_my_subject"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignEnd="@id/view_fake_horizontal"
        android:layout_alignBottom="@id/view_fake_vertical"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="#FEFEFE"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp"
        android:foreground="?android:attr/selectableItemBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/text_my_subject_text"
                android:textAlignment="center"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_change"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignStart="@id/view_fake_horizontal"
        android:layout_alignBottom="@id/view_fake_vertical"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="#FEFEFE"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp"
        android:foreground="?android:attr/selectableItemBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/text_change_text"
                android:textAlignment="center"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_subject_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignEnd="@id/view_fake_horizontal"
        android:layout_alignTop="@id/view_fake_vertical"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="#FEFEFE"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp"
        android:foreground="?android:attr/selectableItemBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/text_subject_list_text"
                android:textAlignment="center"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_my_documents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignStart="@id/view_fake_horizontal"
        android:layout_alignTop="@id/view_fake_vertical"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="#FEFEFE"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp"
        android:foreground="?android:attr/selectableItemBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/text_my_documents_text"
                android:textAlignment="center"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
